--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -9,10 +9,13 @@
     position: absolute;
     bottom: 25%;
     left : 42.5%;
-}
+} */
 
 @media screen and (max-width: 688px) {
-    .google{
-
-    } */
-/* } */
+    .login-container{
+        height: auto;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
