--- a/src/components/ServicesSection/ServicesSection.css
+++ b/src/components/ServicesSection/ServicesSection.css
@@ -3,9 +3,22 @@
    justify-content:center;
 }
 .service-container{
-     width: 60vw;
+    width: 60vw;
     display: grid;
     grid-template-columns: repeat(3,0.5fr);
     justify-items: center;
     grid-row-gap: 3rem;
+}
+
+/* responsive section */
+
+@media screen and (max-width:688px){
+   .service-container{
+      width: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+   }
+     
 }
