--- a/src/components/ServiceDetails/ServiceDetails.css
+++ b/src/components/ServiceDetails/ServiceDetails.css
@@ -15,3 +15,19 @@
     border-radius: 10px;
     object-fit: cover;
 }
+
+
+/* mobile responsive */
+@media screen and (max-width: 688px) {
+    .detail-container{
+        height: auto;
+        flex-direction: column;
+    }
+
+    .detail-img img{
+    width: 22rem;
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+}
